<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditActivity">


    <Button
        android:id="@+id/bt_add_suggestion"
        android:layout_width="63dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:onClick="onClickSamplePass"
        android:text="@string/add_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swUpperCase"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/tvUsrInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_insert"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInputTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
         
        android:text="@string/add_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsrInsert" />

    <EditText
        android:id="@+id/etInputTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:textSize="16sp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputTitle" />

    <EditText
        android:id="@+id/etInputName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:textSize="16sp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputName" />

    <TextView
        android:id="@+id/tvInputPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
         
        android:text="@string/add_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGenre" />


    <EditText
        android:id="@+id/etInputPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:textSize="16sp"
        android:inputType="textUri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputPass" />

    <Spinner
        android:id="@+id/etGenre"
        android:layout_width="395dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:entries="@array/list_genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputGenre"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:textSize="16sp"
        android:hint="@string/add_link_hint"
        android:focusable="true"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSamplePass" />

    <EditText
        android:id="@+id/etKeta"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/add_pass_keta_hint"
        android:textSize="16sp"
         
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/tvKeta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swSpecialCharacter" />

    <TextView
        android:id="@+id/tvInputGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInputName" />

    <TextView
        android:id="@+id/tvAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_auto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInputPass" />

    <TextView
        android:id="@+id/tvSamplePass"
        android:layout_width="174dp"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etKeta" />

    <TextView
        android:id="@+id/tvKeta"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_keta"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/bt_add_suggestion"
        app:layout_constraintTop_toTopOf="@+id/etKeta" />

    <TextView
        android:id="@+id/tvInputMemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/add_memo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLink" />

    <EditText
        android:id="@+id/etInputMemo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputMemo" />

    <Switch
        android:id="@+id/swSpecialCharacter"
        android:layout_width="110dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/special_character"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAuto" />

    <Switch
        android:id="@+id/swNumber"
        android:layout_width="80dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:text="@string/number"
        app:layout_constraintStart_toEndOf="@+id/swSpecialCharacter"
        app:layout_constraintTop_toTopOf="@+id/swSpecialCharacter" />

    <Switch
        android:id="@+id/swUpperCase"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:text="@string/upper_case"
        app:layout_constraintStart_toEndOf="@+id/swNumber"
        app:layout_constraintTop_toTopOf="@+id/swNumber" />

    <TextView
        android:id="@+id/tvInputName"
        android:layout_width="300dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInputTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>